<resources>
    <string name="app_name">EPSON</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="action_reload">Reload</string>
    <string name="action_signout">Sign Out</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_remote">RemoteActivity</string>

    <string name="connection_error">ERROR IN CONNECTION. YOU CAN CHANGE IP ADDRESS FROM SETTINGS</string>
    <string name="auth_error">AUTHENTICATION ERROR. YOU CAN CHANGE KEY FROM SETTINGS </string>
    <string name="try_again">TRY AGAIN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_loading">LoadingActivity</string>

    <string name="title_activity_test">TestActivity</string>

    <string name="title_acticity_connection">ConnectionActivity</string>

    <!--TAGS for CONNECTION DETAILS ACTIVITY-->

    <string name="iptextview">IP ADDRESS</string>
    <string name="porttextview">PORT</string>
    <string name="initialconnect">CONNECT</string>


    <!--Tags for buttons in Remote-->

    <string name="powerButton">power</string>
    <string name="source">source</string>
    <string name="mute">mute</string>
    <string name="computer">computer</string>
    <string name="video">video</string>
    <string name="usb">usb</string>
    <string name="lan">lan</string>
    <string name="menu">menu</string>
    <string name="up">up</string>
    <string name="esc">esc</string>
    <string name="left">left</string>
    <string name="enter">enter</string>
    <string name="right">right</string>
    <string name="user">user</string>
    <string name="down">down</string>
    <string name="pointer">pointer</string>
    <string name="pageinc">pageup</string>
    <string name="zoominc">zoomin</string>
    <string name="volinc">volup</string>
    <string name="help">help</string>
    <string name="pagedec">pagedown</string>
    <string name="zoomdec">zoomout</string>
    <string name="voldec">voldown</string>
    <string name="freeze">freeze</string>
    <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num">num</string>


    <string name="textView">text</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <!--SETTINGS-->

    <string name="IP_ADDRESS">IP Address</string>
    <string name="DEFAULT_IP">IP ADDRESS OF ESP</string>

    <string name="PORT">PORT</string>
    <string name="DEFAULT_PORT">LISTENING PORT OF ESP</string>

    <string name="CHANGEKEY">CHANGE KEY</string>
    <string name="DEFAULT_CAHNGEKEY">Enter Login Key</string>


    <string name="hello_world">Hello world!</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>

    <!--String tags for voice response-->
    <string name="waiting">Please Wait</string>
    <string name="successPrjector">Prjector On</string>
    <string name="failProjector">Failed to Switch On Projector </string>
    <string name="successLight">Lights On</string>
    <string name="failLight">Failed to Switch Light </string>


    <!--String tags for Introduction-->
    <string name="about_MainActivity">
        Control EPSON projector and Home Lights in the most Safest and Smartest way.
        The DRAGONITE PRTOCOL comes with a multi layered encryption technique which
        provides high end security.
    </string>

    <!--String tags for SecurityDescriptionActiviy-->
    <string name="about_SecurityDescriptionActiviy">
        A login key keeps you protected from intruders
        who has the same app. Keep it secret..!!
    </string>


</resources>
