<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:title="@string/IP_ADDRESS"
        android:defaultValue="@string/DEFAULT_IP"
        android:key="ipaddress"
        android:maxLines="1"
        android:singleLine="true"/>

    <EditTextPreference
        android:capitalize="words"
        android:title="@string/PORT"
        android:key="port"
        android:defaultValue="@string/DEFAULT_PORT"
        android:maxLines="1"
        android:singleLine="true"/>

    <EditTextPreference
        android:capitalize="words"
        android:title="@string/CHANGEKEY"
        android:key="changekey"
        android:defaultValue="@string/DEFAULT_CAHNGEKEY"
        android:maxLines="1"
        android:singleLine="true"/>


</PreferenceScreen>
